--- a/package.json
+++ b/package.json
@@ -14,13 +14,14 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "bootstrap": "^5.2.2",
     "jquery": "^3.6.1",
-    "next": "13.0.0",
-    "react": "18.2.0",
+    "next": "^13.0.0",
+    "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
-    "react-dom": "18.2.0"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "eslint": "8.26.0",
-    "eslint-config-next": "13.0.0"
+    "eslint-config-next": "13.0.0",
+    "ngrok": "^4.3.3"
   }
 }
